<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:textSize="@dimen/dimen_22dp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/dimen_15dp"
        />
    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_alignParentEnd="true"
        android:layout_toLeftOf="@+id/imgDelete"
        android:layout_marginRight="@dimen/dimen_60dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_alignParentRight="true"
        tools:ignore="VectorDrawableCompat" />


    <ImageView
        android:id="@+id/imgDelete"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/dimen_10sp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_alignParentRight="true"
        tools:ignore="VectorDrawableCompat" />

    <ScrollView
        android:id="@+id/scrolview"
        android:layout_below="@+id/txtCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_below="@+id/scrolview"
            android:background="@android:color/white"
            >
            <TextView
                android:id="@+id/select_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border" />
            <TextView
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/select_city"

                />
            <TextView
                android:id="@+id/edtEnterFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtCity"
                />
            <TextView
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastName"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtEnterFirstName"

                />
            <TextView
                android:id="@+id/edtNickName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickName"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtLastName"
                />

            <TextView
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtNickName"
                />
            <TextView
                android:id="@+id/edtBankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bank Name"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"

                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtMobile"
                />
            <TextView
                android:id="@+id/edtBankAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accountNumber"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"

                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtBankName"
                />
            <TextView
                android:id="@+id/edtIfsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ifsc"

                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtBankAccount"
                />

            <TextView
                android:id="@+id/edtWalletId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtIfsc"
                />

            <TextView
                android:id="@+id/wallet_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_filled_border"
                android:layout_below="@+id/edtWalletId"
                />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginBottom="@dimen/dimen_150dp"
                android:layout_marginLeft="@dimen/dimen_15dp"
                android:layout_below="@id/wallet_type"
                >
                <RadioButton
                    android:id="@+id/rb_buisness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buisness"
                    android:paddingRight="10dp"
                    />
                <RadioButton
                    android:id="@+id/rb_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family"
                    android:paddingRight="10dp"
                    />
                <RadioButton
                    android:id="@+id/rb_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Friend"
                    android:paddingRight="10dp"
                    />
                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:paddingRight="10dp"
                    />
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>