<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/ic_background">

    <ImageView
        android:visibility="invisible"
        android:id="@+id/imgBack"
        android:layout_width="@dimen/dimen_35dp"
        android:layout_height="@dimen/dimen_35dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chnagePassword"
        android:layout_below="@+id/imgBack"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_22dp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/dimen_15dp"
        />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_below="@+id/txtCreateAccount"
            android:background="@android:color/white"
            >

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:text="@string/passReset"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setPass"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_below="@+id/txtWelcome"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:textSize="@dimen/dimen_17sp"
                />

            <EditText
                android:id="@+id/edtOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/oldPass"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_border_edittext"
                android:layout_below="@+id/txtSignin"
                />
            <EditText
                android:id="@+id/edtNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPass"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:background="@drawable/rounded_border_edittext"
                android:layout_below="@+id/edtOldPass"
                />
            <EditText
                android:id="@+id/edtEnterConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ConfirmNew"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginLeft="@dimen/dimen_25sp"
                android:layout_marginRight="@dimen/dimen_25sp"
                android:padding="@dimen/dimen_15dp"
                android:inputType="textPassword"
                android:background="@drawable/rounded_border_edittext"
                android:layout_below="@+id/edtNewPass"
                />
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtEnterConfirmPass"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/rounded_border_button"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/splashColor"
                android:textSize="@dimen/dimen_20sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
</RelativeLayout>